# Coherent

./: CITATION.cff  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-MIT.  README.md
.github/: ​implementation_feedback.md
.github/ISSUE_TEMPLATE/: enterprise_integration_request.md
.github/workflows/: test.yml
Logigate-architecture/: Cargo.toml
Logigate-architecture/src/: lib.rs
kinetic-logic/: Cargo.toml
kinetic-logic/examples/: sandbox_run.rs
kinetic-logic/src/: lib.rs
zkp-coordinate-vault/: Cargo.toml
zkp-coordinate-vault/src/: lib.rs
